tags/3.7/project/static.rst
Общая статика проекта
=====================
Общая статика собирается в подпапку ``global``, чтобы не конфликтовать со статикой других приложений, в том числе сторонних.

ani
---
Анимационные картинки, например, для прогресс-бара при работе с заказом билетов на сайте.

css
---
CSS-стили для оформления сайта.

Админ-панель
^^^^^^^^^^^^

* ``editor`` - оформление редактора HTML-страниц.
* ``stagehall-style`` - оформление редактора схем залов/секторов.

Фронтенд
^^^^^^^^

* ``dev`` - стили только для ``development``-окружения.
* ``normalize`` - нормализация (сброс стилей разных браузеров по умолчанию).
* ``main`` - базовые стили для любых разделов сайта.
* ``template`` - оформление всего сайта, кроме шагов заказа билетов (основной шаблон).
* ``mq`` - оформление всего сайта, кроме шагов заказа билетов (медиа-запросы для адаптивности).
* ``mq-order`` - оформление шагов заказа билетов (основной шаблон и медиа-запросы для адаптивности).

ico
---
Разнообразные иконки сайта.

* ``favicon.ico`` - стандартная иконка.
* ``android-chrome-*.png`` - иконки для устройств на базе **Anfoid**.
* ``apple-touch-icon-*.png`` - иконки для устройств на базе **iOS**.
* ``mstile-*.png`` - иконки для устройств на базе **Windows Phone**.
* ``yandex-tableau*.png`` - иконки для добавления сайта в табло **Яндекс.Браузер**.

* ``ruble-sign.svg`` - иконка символа рубля, используемая при заказе билетов.

js
--
JavaScript-библиотеки для работы сайта.

* ``jquery`` - Удобная работа с DOM-деревом.
* ``jscookie`` - Удобная работа с *cookies*.
* ``lightbox2`` - Всплывающее окно ("лайтбокс") для вывода изображений или другого контента.
* ``waypoints`` - Смена позиционирования выбранного элемента на т.н. ``sticky``-позиционирование, когда пользователь доходит до него при прокрутке страницы.
* ``bxslider`` - Прокручиваемая снизу вверх "карусель" больших горизонтальных афиш.
* ``fullcalendar`` - Календарь для фильтрации событий по дате.
* ``lodash`` - Библиотека для работы с комплексными данными (объекты, массивы) в JavaScript при заказе билетов.

png
---
Изображения в формате ``png``, в основном для шаблонов почтовых рассылок.

svg
---
Векторная графика для оформления сайта.

В папке ``city`` - стилизованные под текущее оформления сайта иконки городов. Название иконки должно совпадать с псевдонимом города в модели ``bezantrakta.location.models.City``.
