tags/3.8/project/static.rst
#####################
Общая статика проекта
#####################
Общая статика проекта собирается в подпапку ``global`` внутри ``STATIC_ROOT``, чтобы не конфликтовать со статикой других приложений, в том числе сторонних.

***
ani
***
Анимационные картинки, например, для прогресс-бара при работе с заказом билетов на сайте.

.. todo:: Прогресс-бар при работе с заказом билетов на сайте лучше сделать CSS-анимацией для оптимизации работы браузера.

***
css
***
CSS-стили для оформления сайта:

* Админ-панель:

  * ``editor`` - оформление редактора HTML-страниц.
  * ``stagehall-style`` - оформление редактора схем залов/секторов (как в админ-панели, так и на сайте).

* Фронтенд:

  * ``dev`` - стили только для ``development``-окружения.
  * ``normalize`` - нормализация (сброс стилей разных браузеров по умолчанию).
  * ``main`` - базовые стили для любых разделов сайта.
  * ``template`` - оформление всего сайта, кроме шагов заказа билетов (основной шаблон).
  * ``mq`` - оформление всего сайта, кроме шагов заказа билетов (медиа-запросы для адаптивности).
  * ``mq-order`` - оформление шагов заказа билетов (основной шаблон и медиа-запросы для адаптивности).

.. todo:: Оптимизировать стили, отказавшись от ненужных, минифицируя содержимое файлов, загружая самые критические правила в заголовке шаблона сайта.

***
ico
***
Разнообразные иконки сайта:

* ``favicon.ico`` - стандартная иконка.
* ``android-chrome-*.png`` - иконки для устройств на базе **Anfoid**.
* ``apple-touch-icon-*.png`` - иконки для устройств на базе **iOS**.
* ``mstile-*.png`` - иконки для устройств на базе **Windows Phone**.
* ``yandex-tableau*.png`` - иконки для добавления сайта в табло **Яндекс.Браузер**.

* ``ruble-sign.svg`` - иконка символа рубля, используемая при заказе билетов.

**
js
**
JavaScript-библиотеки для работы сайта:

* ``bxslider`` - Прокручиваемая снизу вверх "карусель" больших горизонтальных афиш.
* ``fullcalendar`` - Календарь для фильтрации событий по дате.
* ``jquery`` - Удобная работа с DOM-деревом.
* ``jscookie`` - Удобная работа с *cookies*.
* ``lightbox2`` - Всплывающее окно ("лайтбокс") для вывода изображений или другого контента.
* ``lodash`` - Библиотека для работы с комплексными данными (объекты, массивы) в JavaScript при заказе билетов.
* ``prognroll`` - Узкий прогресс-баз вверху страниц сайта, обозначающий текущее положение при прокрутке страницы.
* ``waypoints`` - Смена позиционирования выбранного элемента на т.н. ``sticky``-позиционирование, когда пользователь доходит до него при прокрутке страницы.

  .. todo:: Пока используется только в админ-панели, но можно использовать при заказе билетов для ``sticky``-позиционирования корзины ПР и кнопок навигации.

***
png
***
Изображения в формате ``png``, в основном для шаблонов почтовых рассылок.

***
svg
***
Векторная графика для оформления сайта, чтобы фоновые изображения у блоков всегда были чёткими на разных устройствах.

.. note:: Стилизованные под текущее оформления сайта иконки городов в формате SVG находятся в корне SVN-проекта в папке ``city_icons_svg``. Их нужно будет загружать в админ-панели при создании новых городов, при необходимости рисуя и добавляя новые недостающие иконки.
